[package]
name = "minecraft-server"
version = "0.1.0"
authors = ["Kara <rusthero@proton.me>"]
edition = "2021"
description = "Minecraft server implementation without core game features."
repository = "https://github.com/rusthero/minecraft-server"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Add keywords and categories before publishing to crates.io

[dependencies]
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "net"] }
